--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "api",
+  "name": "barnga-api",
   "version": "1.0.0",
   "description": "",
   "main": "routes/index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
